Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Escencia Tienda</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Escencia Tienda Oficial | Bolsos, Mochilas y Morrales de Diseño - Córdoba, Argentina</title> <meta name="description" content="Descubre Escencia, la tienda oficial de bolsos, mochilas y morrales de diseño en Córdoba, Argentina. Productos únicos con historia y propósito. ¡Envío a todo el país!"> <meta name="keywords" content="bolsos, mochilas, morrales, tienda online, diseño, moda, accesorios, Argentina, Córdoba, Escencia, carteras, maternal, deportivo, profesional"> <meta name="author" content="Escencia Tienda"> <meta name="robots" content="index, follow"> <meta property="og:title" content="Escencia Tienda Oficial | Bolsos, Mochilas y Morrales de Diseño">
+  <meta property="og:description" content="Descubre Escencia, la tienda oficial de bolsos, mochilas y morrales de diseño en Córdoba, Argentina. Productos únicos con historia y propósito.">
+  <meta property="og:image" content="https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png"> <meta property="og:url" content="TU_URL_DEL_SITIO.com"> <meta property="og:type" content="website">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Escencia Tienda Oficial | Bolsos, Mochilas y Morrales de Diseño">
+  <meta name="twitter:description" content="Descubre Escencia, la tienda oficial de bolsos, mochilas y morrales de diseño en Córdoba, Argentina. Productos únicos con historia y propósito.">
+  <meta name="twitter:image" content="https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png">
+
   <link rel="icon" type="image/png" href="https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png"> <style>
     html {
       scroll-behavior: smooth;
@@ -41,6 +49,8 @@
       text-decoration: none;
       font-weight: bold;
       font-size: 20px; /* Tamaño de fuente más adecuado */
+      /* Añadido para SEO: Asegurar que el texto sea legible y accesible */
+      white-space: nowrap; /* Evita que los enlaces se rompan en varias líneas */
     }
 
     section {
@@ -563,35 +573,29 @@
 <body>
 
 <header>
-  <img src="https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png" alt="Escencia">
+  <h1 style="position:absolute; left:-9999px; width:1px; height:1px; overflow:hidden;">Escencia Tienda Oficial - Bolsos, Mochilas y Morrales de Diseño en Córdoba, Argentina</h1>
+  <img src="https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png" alt="Logo de Escencia, tienda de bolsos, mochilas y morrales artesanales">
 </header>
 
 <nav>
   <a href="#quienes">¿Quiénes somos?</a>
-  <a href="#productos">Productos</a>
-  <a href="#contacto">Contacto</a>
-</nav>
+  <a href="#productos">Nuestros Productos</a> <a href="#contacto">Contacto Escencia</a> </nav>
 
 <section id="quienes">
-  <h2>¿Quiénes somos?</h2>
-  <p>ESCENCIA nació de dos hermanas unidas por una historia difícil, pero aún más por la fuerza de no rendirse. Crecimos en una infancia dura, donde cada paso fue una batalla… pero juntas aprendimos a transformar el dolor en impulso, y la lucha en creación.</p>
+  <h2>¿Quiénes somos? - Escencia Bolsos y Mochilas con Propósito</h2> <p>ESCENCIA nació de dos hermanas unidas por una historia difícil, pero aún más por la fuerza de no rendirse. Crecimos en una infancia dura, donde cada paso fue una batalla… pero juntas aprendimos a transformar el dolor en impulso, y la lucha en creación.</p>
   <p>Creamos esta marca como reflejo de lo que somos: mujeres que no se olvidan de su origen, que caminan con el corazón en alto, y que llevan consigo todo lo que realmente importa.</p>
-  <p>Cada bolso, cada mochila que diseñamos, tiene algo de nosotras. No son solo productos: son fragmentos de un camino recorrido con coraje, amor y propósito.</p>
-  <p>Escencia es eso: lo esencial, lo verdadero, lo que queda cuando todo lo demás se cae.</p>
-  <p>Gracias por estar acá. Gracias por llevar con vos un pedacito de nuestra historia.</p>
+  <p>Cada **bolso**, cada **mochila** que diseñamos, tiene algo de nosotras. No son solo productos: son fragmentos de un camino recorrido con coraje, amor y propósito.</p>
+  <p>Escencia es eso: lo esencial, lo verdadero, lo que queda cuando todo lo demás se cae. Descubre nuestros **morrales de diseño**, **bolsos deportivos** y **mochilas maternales** fabricados con amor en Córdoba, Argentina.</p> <p>Gracias por estar acá. Gracias por llevar con vos un pedacito de nuestra historia.</p>
 </section>
 
 <section id="productos">
-  <h2 style="text-align:center; font-size:2.2em; margin-bottom:40px; color:#333;">Nuestros Productos</h2>
-  <main class="container" id="productList"></main>
+  <h2 style="text-align:center; font-size:2.2em; margin-bottom:40px; color:#333;">Catálogo de Bolsos, Mochilas y Morrales de Escencia</h2> <main class="container" id="productList"></main>
 </section>
 
 <section id="contacto">
-  <h2>Contacto</h2>
-  <p>📱 WhatsApp: <a href="https://wa.me/5493541529201" target="_blank">+54 9 3541 529201</a></p>
-  <p>📧 Email: <span>escencia@tienda.com</span></p>
+  <h2>Contacto Escencia - Ubicación y Atención</h2> <p>📱 WhatsApp: <a href="https://wa.me/5493541529201" target="_blank" rel="noopener noreferrer">Envíanos un WhatsApp: +54 9 3541 529201</a></p> <p>📧 Email: <span>escencia@tienda.com</span></p>
   <p>📍 Cosquín, Córdoba, Argentina</p>
-</section>
+  <p>¡Contáctanos para tus consultas sobre nuestros **bolsos, mochilas y morrales**!</p> </section>
 
 <div class="cart-float" id="floatingCart">
   <span>Total: $<span id="cartTotal">0</span></span>
@@ -603,8 +607,7 @@
 <div class="modal" id="cartModal">
   <div class="modal-content">
     <button class="close-modal" onclick="toggleCart()">x</button>
-    <h2>Tu carrito</h2>
-    <div id="cartItems"></div>
+    <h2>Tu carrito de compras en Escencia</h2> <div id="cartItems"></div>
     <p style="font-weight: bold; font-size: 20px; text-align: right; margin-top: 20px;">Total: $<span id="modalTotal">0</span></p>
     <button class="clear-cart-button" onclick="clearCart()">Vaciar Carrito</button>
     <button class="whatsapp-button" onclick="sendWhatsApp()">Confirmar pedido por WhatsApp</button>
@@ -614,8 +617,7 @@
 <div class="modal" id="productDetailModal">
     <div class="modal-content">
         <button class="close-modal" onclick="closeProductDetailModal()">x</button>
-        <img class="main-detail-image" id="detailImage" src="" alt="Imagen del Producto">
-        <div class="thumbnail-gallery" id="thumbnailGallery">
+        <img class="main-detail-image" id="detailImage" src="" alt="Imagen principal del producto Escencia"> <div class="thumbnail-gallery" id="thumbnailGallery">
             </div>
         <h2 id="detailName"></h2>
         <p class="detail-price">$<span id="detailPrice"></span></p>
@@ -633,10 +635,10 @@
       price: 50000,
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1752837295/bolso_1_keowvq.webp",
-        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1700000000/bolso_2_ejemplo.webp", // URL de ejemplo para segunda imagen
-        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1700000001/bolso_3_ejemplo.webp"  // URL de ejemplo para tercera imagen
+        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1700000000/bolso_2_ejemplo.webp",
+        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1700000001/bolso_3_ejemplo.webp"
       ],
-      description: "Bolso deportivo con amplio espacio, ideal para tus actividades diarias o viajes cortos. Fabricado con materiales resistentes y diseño moderno. Perfecto para llevar tu ropa, zapatillas y accesorios de forma organizada."
+      description: "Bolso deportivo con amplio espacio, ideal para tus actividades diarias o viajes cortos. Fabricado con materiales resistentes y diseño moderno, perfecto para llevar tu ropa, zapatillas y accesorios de forma organizada. Disponible en varios colores, este bolso es el compañero ideal para el gimnasio o una escapada de fin de semana. ¡Compra tu bolso deportivo Escencia hoy!" // Descripción más detallada con palabras clave
     },
     {
       id: 2,
@@ -644,11 +646,11 @@
       price: 35000,
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1752837432/cuna_howlgp.webp",
-        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1700000002/mochila_2_ejemplo.webp", // URL de ejemplo
-        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1700000003/mochila_3_ejemplo.webp", // URL de ejemplo
-        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1700000004/mochila_4_ejemplo.webp"  // URL de ejemplo
+        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1700000002/mochila_2_ejemplo.webp",
+        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1700000003/mochila_3_ejemplo.webp",
+        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1700000004/mochila_4_ejemplo.webp"
       ],
-      description: "Mochila maternal multifuncional, perfecta para organizar todo lo de tu bebé. Incluye compartimentos térmicos para mamaderas, un cambiador plegable y múltiples bolsillos. Su diseño ergonómico la hace cómoda de llevar."
+      description: "Mochila maternal multifuncional, perfecta para organizar todo lo de tu bebé. Incluye compartimentos térmicos para mamaderas, un cambiador plegable y múltiples bolsillos internos y externos para pañales, toallitas y juguetes. Su diseño ergonómico la hace cómoda de llevar para los padres modernos. ¡La mejor mochila para mamás con estilo!" // Descripción más detallada
     },
     {
       id: 3,
@@ -656,13 +658,13 @@
       price: 65000,
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1752837584/morral_sbl8yt.webp",
-        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1700000005/morral_2_ejemplo.webp"  // URL de ejemplo
+        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1700000005/morral_2_ejemplo.webp"
       ],
-      description: "Morral profesional con diseño ergonómico y compartimento acolchado para laptop de hasta 15 pulgadas. Ideal para el trabajo o la universidad, ofreciendo estilo y funcionalidad. Cuenta con varios bolsillos internos para accesorios."
+      description: "Morral profesional Escence Pro con diseño elegante y compartimento acolchado para laptop de hasta 15 pulgadas. Ideal para el trabajo, la universidad o viajes de negocios, ofreciendo estilo y funcionalidad. Cuenta con varios bolsillos internos para accesorios, documentos y un bolsillo de acceso rápido para el teléfono. ¡El morral perfecto para profesionales!" // Descripción más detallada
     }
   ];
 
-  let cart = []; // Usamos 'let' para poder reasignar al vaciar el carrito
+  let cart = [];
 
   function renderProducts() {
     const container = document.getElementById('productList');
@@ -670,7 +672,7 @@
     products.forEach(p => {
       container.innerHTML += `
         <div class="product" onclick="openProductDetail(${p.id})">
-          <img src="${p.images[0]}" alt="${p.name}"> <h3>${p.name}</h3>
+          <img src="${p.images[0]}" alt="${p.name} - Imagen principal"> <h3>${p.name}</h3>
           <p>$${p.price.toLocaleString('es-AR')}</p>
           <button onclick="event.stopPropagation(); addToCart(${p.id});">Agregar al carrito</button>
         </div>
@@ -699,7 +701,7 @@
     const cartItemsDiv = document.getElementById('cartItems');
     cartItemsDiv.innerHTML = '';
     if (cart.length === 0) {
-        cartItemsDiv.innerHTML = '<p style="text-align: center; color: #888;">El carrito está vacío.</p>';
+        cartItemsDiv.innerHTML = '<p style="text-align: center; color: #888;">El carrito de Escencia está vacío. ¡Agrega tus productos favoritos!</p>'; // Mensaje más SEO friendly
     } else {
         cart.forEach((item, index) => {
             cartItemsDiv.innerHTML += `
@@ -715,7 +717,6 @@
             `;
         });
     }
-    // Animación de pulso en el carrito flotante
     const floatingCart = document.getElementById('floatingCart');
     floatingCart.classList.add('pulsing');
     setTimeout(() => {
@@ -728,7 +729,7 @@
     if (item) {
       item.quantity += change;
       if (item.quantity <= 0) {
-        removeItem(id); // Elimina si la cantidad llega a 0 o menos
+        removeItem(id);
       } else {
         updateCartDisplay();
       }
@@ -741,7 +742,7 @@
   }
 
   function clearCart() {
-      if (confirm('¿Estás seguro de que quieres vaciar el carrito?')) {
+      if (confirm('¿Estás seguro de que quieres vaciar tu carrito de compras de Escencia?')) { // Mensaje más SEO friendly
           cart = [];
           updateCartDisplay();
       }
@@ -754,30 +755,29 @@
 
   function showAddToCartMessage(productName) {
     const messageDiv = document.getElementById('addToCartMessage');
-    messageDiv.textContent = `"${productName}" añadido al carrito.`;
+    messageDiv.textContent = `"${productName}" añadido al carrito de Escencia.`; // Mensaje más SEO friendly
     messageDiv.classList.add('show');
     setTimeout(() => {
         messageDiv.classList.remove('show');
-    }, 2000); // El mensaje desaparece después de 2 segundos
+    }, 2000);
   }
 
   function sendWhatsApp() {
     if (cart.length === 0) {
-      alert("El carrito está vacío. Agrega productos antes de confirmar tu pedido.");
+      alert("El carrito de Escencia está vacío. Agrega productos antes de confirmar tu pedido.");
       return;
     }
-    let message = "Hola! Quiero confirmar el siguiente pedido:\n\n";
+    let message = "Hola! Quiero confirmar el siguiente pedido de Escencia:\n\n"; // Mensaje más SEO friendly
     cart.forEach(p => {
       message += `• ${p.name} x ${p.quantity} - $${(p.price * p.quantity).toLocaleString('es-AR')}\n`;
     });
     const total = cart.reduce((sum, item) => sum + (item.price * item.quantity), 0);
     message += `\nTotal: $${total.toLocaleString('es-AR')}`;
-    const phone = "5493541529201"; // Mantén el número de teléfono
+    const phone = "5493541529201";
     const url = `https://wa.me/${phone}?text=${encodeURIComponent(message)}`;
     window.open(url, '_blank');
   }
 
-  // --- Funciones para la Modal de Detalle de Producto con galería ---
   function openProductDetail(id) {
       const product = products.find(p => p.id === id);
       if (!product) return;
@@ -785,25 +785,22 @@
       const detailImage = document.getElementById('detailImage');
       const thumbnailGallery = document.getElementById('thumbnailGallery');
 
-      // Limpiar miniaturas anteriores
       thumbnailGallery.innerHTML = '';
 
-      // Mostrar la primera imagen como principal
       detailImage.src = product.images[0];
-      detailImage.alt = product.name;
+      detailImage.alt = `Imagen principal de ${product.name} de Escencia`; // Alt dinámico y específico para SEO
 
-      // Crear miniaturas
       product.images.forEach((imgSrc, index) => {
           const thumb = document.createElement('img');
           thumb.src = imgSrc;
-          thumb.alt = `Vista ${index + 1} de ${product.name}`;
+          thumb.alt = `Vista ${index + 1} de ${product.name}`; // Alt específico para cada miniatura
           thumb.onclick = () => {
               detailImage.src = imgSrc;
-              // Remover la clase 'selected-thumbnail' de todas y añadirla a la actual
+              // Actualizar el alt de la imagen principal cuando cambia
+              detailImage.alt = `Vista ${index + 1} de ${product.name}`;
               Array.from(thumbnailGallery.children).forEach(t => t.classList.remove('selected-thumbnail'));
               thumb.classList.add('selected-thumbnail');
           };
-          // Marcar la primera miniatura como seleccionada por defecto
           if (index === 0) {
               thumb.classList.add('selected-thumbnail');
           }
@@ -827,9 +824,8 @@
       document.getElementById('productDetailModal').style.display = 'none';
   }
 
-  // Inicializa la página al cargar
   renderProducts();
-  updateCartDisplay(); // Para asegurar que el total inicial sea 0
+  updateCartDisplay();
 </script>
 
 </body>
