--- a/index.html
+++ b/index.html
@@ -680,8 +680,8 @@
   <h2>¿Quiénes somos? - Escencia: Bolsos y Mochilas con Propósito</h2>
   <p>ESCENCIA nació de dos hermanas unidas por una historia difícil, pero aún más por la fuerza de no rendirse. Crecimos en una infancia dura, donde cada paso fue una batalla… pero juntas aprendimos a transformar el dolor en impulso, y la lucha en creación.</p>
   <p>Creamos esta marca como reflejo de lo que somos: mujeres que no se olvidan de su origen, que caminan con el corazón en alto, y que llevan consigo todo lo que realmente importa.</p>
-  <p>Cada **bolso**, cada **mochila** que diseñamos, tiene algo de nosotras. No son solo productos: son fragmentos de un camino recorrido con coraje, amor y propósito.</p>
-  <p>Escencia es eso: lo esencial, lo verdadero, lo que queda cuando todo lo demás se cae. Descubre nuestros **morrales de diseño**, **bolsos deportivos** y **mochilas maternales** fabricados con amor en Córdoba, Argentina.</p>
+  <p>Cada bolso, cada mochila que diseñamos, tiene algo de nosotras. No son solo productos: son fragmentos de un camino recorrido con coraje, amor y propósito.</p>
+  <p>Escencia es eso: lo esencial, lo verdadero, lo que queda cuando todo lo demás se cae.</p>
   <p>Gracias por estar acá. Gracias por llevar con vos un pedacito de nuestra historia.</p>
 </section>
 
@@ -717,7 +717,7 @@
   <p>📱 WhatsApp: <a href="https://wa.me/5493541529201" target="_blank" rel="noopener noreferrer">Envíanos un WhatsApp: +54 9 3541 529201</a></p>
   <p>📧 Email: <span>escencia@tienda.com</span></p>
   <p>📍 Cosquín, Córdoba, Argentina</p>
-  <p>¡Contáctanos para tus consultas sobre nuestros bolsos, mochilas y morrales!</p>
+  <p>¡Contáctanos para tus consultas sobre nuestros productos!</p>
 </section>
 
 <div class="cart-float" id="floatingCart">
