Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -660,6 +660,7 @@
 <div id="sidebarOverlay"></div>
 <aside id="sidebarPanel">
   <nav>
+    <a href="#menu">Menú</a>
     <a href="#quienes">¿Quiénes somos?</a>
     <a href="#productos">Productos</a>
     <a href="#contacto">Contacto</a>
@@ -669,7 +670,7 @@
 <!-- ELIMINADO EL MENU PRINCIPAL <nav> -->
 
 <section id="quienes">
-  <h2>¿Quiénes somos? - Escencia: Bolsos y Mochilas con Propósito</h2>
+  <h2>¿Quiénes somos?</h2>
   <p>ESCENCIA nació de dos hermanas unidas por una historia difícil, pero aún más por la fuerza de no rendirse. Crecimos en una infancia dura, donde cada paso fue una batalla… pero juntas aprendimos a transformar el dolor en impulso, y la lucha en creación.</p>
   <p>Creamos esta marca como reflejo de lo que somos: mujeres que no se olvidan de su origen, que caminan con el corazón en alto, y que llevan consigo todo lo que realmente importa.</p>
   <p>Cada bolso, cada mochila que diseñamos, tiene algo de nosotras. No son solo productos: son fragmentos de un camino recorrido con coraje, amor y propósito.</p>
