Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
 </section>
 
 <section id="contacto">
-  <h2>Contacto Escencia - Ubicación y Atención</h2>
+  <h2>Contacto Escencia</h2>
   <p>📱 WhatsApp: <a href="https://wa.me/5493541529201" target="_blank" rel="noopener noreferrer">Envíanos un WhatsApp: +54 9 3541 529201</a></p>
   <p>📧 Email: <span>escencia@tienda.com</span></p>
   <p>📍 Cosquín, Córdoba, Argentina</p>
