--- a/index.html
+++ b/index.html
@@ -654,13 +654,28 @@
   <h1 style="position:absolute; left:-9999px; width:1px; height:1px; overflow:hidden;">Escencia Tienda Oficial - Bolsos, Mochilas y Morrales de Diseño en Córdoba, Argentina</h1>
   <img src="https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png" alt="Logo de Escencia, tienda de bolsos, mochilas y morrales artesanales">
 </header>
+<style>
+  /* Estilo para destacar el enlace "Menú" */
+  .destacado {
+    font-size: 1.5em;
+    text-decoration: underline;
+    font-weight: bold;
+    transition: all 0.3s ease;
+  }
+
+  /* Opcional: efecto al pasar el mouse */
+  .destacado:hover {
+    color: #ff4081; /* podés cambiar el color */
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+  }
+</style>
 
 <!-- Ícono hamburguesa para abrir el sidebar -->
 <button id="sidebarIcon">☰</button>
 <div id="sidebarOverlay"></div>
 <aside id="sidebarPanel">
   <nav>
-    <a href="#menu">Menú</a>
+    <a href="#menu" class="destacado">Menú</a>
     <a href="#quienes">¿Quiénes somos?</a>
     <a href="#productos">Productos</a>
     <a href="#contacto">Contacto</a>
