Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
 </section>
 
 <section id="productos">
-  <h2 style="text-align:center; font-size:2.2em; margin-bottom:40px; color:#333;">Catálogo de Bolsos, Mochilas y Morrales de Escencia</h2>
+  <h2 style="text-align:center; font-size:2.2em; margin-bottom:40px; color:#333;">Catálogo Escencia</h2>
   <div class="category-filters" id="categoryFilters">
       <div class="desktop-filters">
           <button class="active" onclick="filterProducts('all', this)">Todos los Productos</button>
