--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@ sidebarLinks.forEach(link => {
     {
       id: 1,
       name: "Bolso Deportivo Escence",
-      price: 50000,
+      price: Muy pronto,
       category: "bolsos",
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1752837295/bolso_1_keowvq.webp",
@@ -812,7 +812,7 @@ sidebarLinks.forEach(link => {
     {
       id: 2,
       name: "Mochila Maternal Escence",
-      price: 35000,
+      price: Muy pronto,
       category: "mochilas",
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1752837432/cuna_howlgp.webp",
@@ -825,7 +825,7 @@ sidebarLinks.forEach(link => {
     {
       id: 3,
       name: "Morral Escence Pro",
-      price: 65000,
+      price: Muy pronto,
       category: "morrales",
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1752837584/morral_sbl8yt.webp",
