Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@ sidebarLinks.forEach(link => {
     },
     {
       id: 2,
-      name: "Mochila Maternal Escence",
+      name: "Mochila Escence",
       price: 0,
       category: "mochilas",
       images: [
