Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
 
 <section id="contacto">
   <h2>Contacto Escencia</h2>
-  <p>📱 WhatsApp: <a href="https://wa.me/5493541529201" target="_blank" rel="noopener noreferrer">Envíanos un WhatsApp: +54 9 3541 529201</a></p>
+  <p>📱 WhatsApp: <a href="https://wa.me/5493541529201" target="_blank" rel="noopener noreferrer">Envíanos un WhatsApp: +5493541 294944</a></p>
   <p>📧 Email: <span>escencia@tienda.com</span></p>
   <p>📍 Cosquín, Córdoba, Argentina</p>
   <p>¡Contáctanos para tus consultas sobre nuestros productos!</p>
@@ -815,7 +815,7 @@ sidebarLinks.forEach(link => {
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1753495176/PSX_20250725_214029_w7qr5k.jpg"
       ],
-      description: "Mochila maternal multifuncional, perfecta para organizar todo lo de tu bebé. Incluye compartimentos térmicos para mamaderas, un cambiador plegable y múltiples bolsillos internos y externos para pañales, toallitas y juguetes. Su diseño ergonómico la hace cómoda de llevar para los padres modernos. ¡La mejor mochila para mamás con estilo!"
+      description: "Mochila multifuncional, perfecta para organizar todo lo de tu bebé. Incluye compartimentos térmicos para mamaderas, un cambiador plegable y múltiples bolsillos internos y externos para pañales, toallitas y juguetes. Su diseño ergonómico la hace cómoda de llevar para los padres modernos. ¡La mejor mochila para mamás con estilo!"
     },
     {
       id: 3,
